统一 RSAUtils 行为